package Model.Order;

public record CargoSpecs(String name, double unitMass, double costPerKg) {}
