package Model.Transport;

public record TransportSpecs(String name, String type, double consumption, double speed) {}
