package Transport;

public class WaterTransport extends Transport{
    public WaterTransport(String name, double expensePerKm, double speedKmH) {
        super(name, expensePerKm, speedKmH);
    }
}
