package Utilities.OrderSort;

import java.util.List;

public interface Sortable<T> {
    void sort(List<T> orders);
}
