@startuml

' ====== Model.Order ======
class Order {
  - Batch batch
  - double distance
  - Transport transport
  + getTotalCost(): double
  + getTime(): double
}

class Batch {
  - List<Cargo> cargoList
  - DataStore dataStore
  + addCargo(name, quantity)
  + getCost(): double
}

class Cargo {
  - String name
  - int quantity
  - double unitMass
  - double costPerKg
  + getTotalMass(): double
  + getCost(): double
}

class CargoSpecs {
  + name: String
  + unitMass: double
  + costPerKg: double
}

Order -- Batch
Order -- Transport
Batch -- Cargo
Batch -- DataStore

' ====== Model.Transport ======
abstract class Transport {
  - String name
  - String type
  - double expensePerKm
  - double speedKmH
  + getTime(distance): double
  + getExpense(distance): double
}

class LandTransport
class AirTransport
class WaterTransport

Transport <|-- LandTransport
Transport <|-- AirTransport
Transport <|-- WaterTransport

class TransportSpecs {
  + name: String
  + type: String
  + consumption: double
  + speed: double
}

class TransportFactory {
  - DataStore dataStore
  + createTransport(name): Transport
}

TransportFactory -- DataStore

' ====== Utilities.LogisticStore ======
interface DataStore {
  + getCargoSpecs(name): CargoSpecs
  + getTransportSpecs(name): TransportSpecs
  + load(loader)
}

class InMemoryDataStore {
  - Map cargoCatalog
  - Map transportCatalog
}

DataStore <|.. InMemoryDataStore

InMemoryDataStore -- CargoSpecs
InMemoryDataStore -- TransportSpecs

' ====== Utilities.LogisticLoader ======
interface DataLoader {
  + loadCargoSpecs(): Map
  + loadTransportSpecs(): Map
}

class CsvDataLoader
class JsonDataLoader
class XmlDataLoader

DataLoader <|.. CsvDataLoader
DataLoader <|.. JsonDataLoader
DataLoader <|.. XmlDataLoader

InMemoryDataStore -- DataLoader

' ====== Utilities.OrderSort ======
interface Sortable<T> {
  + sort(List<T>)
}

class SortOrderByCost
class SortOrderByTime
class SortOrderByTransportType
class ReverseSorter<T>

Sortable <|.. SortOrderByCost
Sortable <|.. SortOrderByTime
Sortable <|.. SortOrderByTransportType
Sortable <|.. ReverseSorter

ReverseSorter -- Sortable

' ====== Utilities.OrderSave ======
interface OrderSaver {
  + save(List<Order>, filename)
}

abstract class OrderSaverDecorator {
  - OrderSaver decoratedSaver
}

class CsvOrderSaver
class JsonOrderSaver
class EncryptionDecorator
class CompressionDecorator

OrderSaver <|.. CsvOrderSaver
OrderSaver <|.. JsonOrderSaver
OrderSaver <|.. OrderSaverDecorator

OrderSaverDecorator <|-- EncryptionDecorator
OrderSaverDecorator <|-- CompressionDecorator

OrderSaverDecorator -- OrderSaver


' ====== Utilities.OrderFilter ======
interface Filterable<T> {
  + filter(List<T>): List<T>
}

class CompositeFilter<T> {
  - List<Filterable<T>> filters
  + addFilter(filter)
  + filter(List<T>): List<T>
}

class FilterByCost {
  - double maxCost
  + filter(List<Order>): List<Order>
}

class FilterByTime {
  - double maxTime
  + filter(List<Order>): List<Order>
}

class FilterByTransportType {
  - String type
  + filter(List<Order>): List<Order>
}

Filterable <|.. CompositeFilter
Filterable <|.. FilterByCost
Filterable <|.. FilterByTime
Filterable <|.. FilterByTransportType

CompositeFilter -- Filterable


@enduml